Update dependency graph

--- a/eng/pipelines/aggregate-reports.yml
+++ b/eng/pipelines/aggregate-reports.yml
@@ -22,6 +22,8 @@ stages:
       - job: GenerateReports
         timeoutInMinutes: 120
         steps:
+          - template: /eng/pipelines/templates/steps/install-dotnet.yml
+
           - task: PowerShell@2
             displayName: Download Latest Dev Packages
             inputs:
@@ -29,7 +31,8 @@ stages:
               filePath: 'eng/scripts/DownloadDevPackages.ps1'
               arguments: >
                 -WorkingDirectory '$(Build.ArtifactStagingDirectory)'
-                -NupkgDestination 'nupkgFiles'
+                -AllNupkgFilesDestination 'allNupkgFiles'
+                -AzureSDKNupkgFilesDestination 'azureSdkNupkgFiles'
 
           - pwsh: |
               npx cspell lint `
@@ -57,7 +60,7 @@ stages:
               pwsh: true
               filePath: 'eng/scripts/dependencies/AnalyzeDeps.ps1'
               arguments: >
-                -PackagesPath '$(Build.ArtifactStagingDirectory)/nupkgFiles'
+                -PackagesPath '$(Build.ArtifactStagingDirectory)/azureSdkNupkgFiles'
                 -LockfilePath '$(Build.SourcesDirectory)/eng/Packages.Data.props'
                 -OutPath '$(Build.ArtifactStagingDirectory)/reports/dependencies.html'
                 -DumpPath '$(Build.ArtifactStagingDirectory)/reports'
@@ -68,7 +71,7 @@ stages:
               pwsh: true
               filePath: 'eng/scripts/dependencies/generate-deps.ps1'
               arguments: >
-                -PackagesPath '$(Build.ArtifactStagingDirectory)/nupkgFiles'
+                -PackagesPath '$(Build.ArtifactStagingDirectory)/allNupkgFiles'
                 -DepsOutputFile '$(Build.ArtifactStagingDirectory)/reports/azure-sdk.deps.json'
                 -ProjectRefPath '$(Build.ArtifactStagingDirectory)/reports'
 
@@ -106,7 +109,7 @@ stages:
               path: '$(Build.ArtifactStagingDirectory)/reports'
 
           - task: AzureFileCopy@4
-            displayName: 'Upload dependency report (1)'
+            displayName: 'Upload Dependency Report'
             inputs:
               sourcePath: '$(Build.ArtifactStagingDirectory)/reports/*'
               azureSubscription: 'Azure SDK Artifacts'
@@ -117,7 +120,7 @@ stages:
               AdditionalArgumentsForBlobCopy: '--exclude-pattern=*data.js*'
 
           - task: AzureFileCopy@4
-            displayName: 'Upload dependency report (2)'
+            displayName: 'Upload Dependency Graph'
             inputs:
               sourcePath: '$(Build.ArtifactStagingDirectory)/reports/*'
               azureSubscription: 'Azure SDK Artifacts'
