--- a/eng/pipelines/templates/steps/BuildSmokeTestProject.yml
+++ b/eng/pipelines/templates/steps/BuildSmokeTestProject.yml
@@ -5,6 +5,7 @@ parameters:
 
 steps:
   - pwsh: tree
+    workingDirectory: $(Pipeline.Workspace)
   - pwsh: |
       $packages = Get-Item *.json
       
