--- a/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
+++ b/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
@@ -4,12 +4,12 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" />
     <PackageReference Include="Azure.ResourceManager.Network" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
   
   <ItemGroup>
-    <Folder Include="NewFolder\" />
     <Folder Include="SessionRecords\ServerTrustGroupTests\" />
   </ItemGroup>
 </Project>
