--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -18,7 +18,7 @@ steps:
     condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
     displayName: 'Use .NET Core 5.0 runtime'
     inputs:
-      packageType: runtime
+      packageType: sdk
       performMultiLevelLookup: true
       version: "5.0.x"
   - task: UseDotNet@2
