--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -115,6 +115,7 @@
     <PackageReference Update="CloudNative.CloudEvents" Version="2.0.0" />
     <PackageReference Update="CloudNative.CloudEvents.SystemTextJson" Version="2.0.0" />
     <PackageReference Update="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="3.0.0" Condition="'$(TargetFramework)' == 'netcoreapp3.1'" />
+    <PackageReference Update="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="5.0.1" Condition="'$(TargetFramework)' == 'net5.0'" />
     <PackageReference Update="Microsoft.Azure.SignalR" Version="1.13.0" />
     <PackageReference Update="Microsoft.Azure.SignalR.Management" Version="1.13.0" />
     <PackageReference Update="Microsoft.Azure.SignalR.Protocols" Version="1.13.0" />
