--- a/sdk/eventhub/Azure.Messaging.EventHubs.Experimental/src/Azure.Messaging.EventHubs.Experimental.csproj
+++ b/sdk/eventhub/Azure.Messaging.EventHubs.Experimental/src/Azure.Messaging.EventHubs.Experimental.csproj
@@ -12,13 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <!-- TEMP: Use a project reference to Event Hubs to allow for use of the internals -->
-    <ProjectReference Include="$(MSBuildThisFileDirectory)..\..\Azure.Messaging.EventHubs\src\Azure.Messaging.EventHubs.csproj" />
-    <!-- END TEMP -->
-
-    <!-- TEMP: Restore when project reference no longer needed
-    <PackageReference Include="Azure.Messaging.EventHubs" />
-    -->
+    <!-- TEMP: Override the central version until the 5.7.x line goes GA.-->
+    <PackageReference Include="Azure.Messaging.EventHubs" OverrideVersion = "5.7.0-beta.1" />
 
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" />
