--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,7 +20,7 @@
 /sdk/extensions/                                @pakrym
 
 # PRLabel: %EngSys
-/sdk/template/                                  @Azure/azure-sdk-eng
+/sdk/template/                                  @chidozieononiwu @weshaggard @benbp
 
 # Smoke tests
 /common/SmokeTests/                             @AlexGhiondea @schaabs @heaths @tg-msft @jsquire
@@ -659,10 +659,10 @@ sdk/trafficmanager/Microsoft.Azure.Management.TrafficManager/            @tmsupp
 
 
 # ######## Eng Sys ######## 
-/eng/           @weshaggard @chidozieononiwu @danieljurek
-/eng/mgmt/      @allenjzhang @m-nash @markcowl
-/**/tests.yml   @benbp
-/**/ci.yml      @chidozieononiwu
+/eng/           @chidozieononiwu @weshaggard @benbp
+/eng/mgmt/      @ArthurMa1978 @m-nash @markcowl
+/**/tests.yml   @chidozieononiwu @weshaggard @benbp
+/**/ci.yml      @chidozieononiwu @weshaggard @benbp
 
 # Add owners for notifications for specific pipelines
 /eng/pipelines/aggregate-reports.yml            @AlexGhiondea @maririos
