--- a/common/SmokeTests/SmokeTest/SmokeTest.csproj
+++ b/common/SmokeTests/SmokeTest/SmokeTest.csproj
@@ -10,8 +10,15 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
-  <ItemGroup>
-    <!-- Add an OverrideDailyVersion attribute to prevent the Update-Dependencies script from overwriting it with a daily build version -->
+  <ItemGroup Label="SmokeTestPackageReferences">
+    <!--
+      These references will not be included in scheduled smoke tests runs; they
+      will be replaced with a comprehensive set of the latest packages for the
+      current generation of SDKs.
+
+      The static set is included here to allow for local testing of the smoke tests project
+      without the need to run CI scripts to rewrite package references.
+    -->
     <PackageReference Include="Azure.Identity" Version="1.5.0-beta.3" />
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.2" />
     <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.6.2" />
@@ -20,11 +27,9 @@
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.5.6" />
     <PackageReference Include="Microsoft.Azure.Devices" Version="1.36.0" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.16.2" />
+    <PackageReference Include="Azure.Template" Version="1.0.3-beta.1218030" />
 
     <!-- This is needed to resolve a build conflict and force the correct version -->
     <PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
-
-    <!-- This is needed for non-nightly smoke test runs -->
-    <PackageReference Include="Azure.Template" Version="1.0.3-beta.1218030" />
   </ItemGroup>
 </Project>
