12767907: Add a package dependency on RL.Net.dll

--- a/sdk/personalizer/Azure.AI.Personalizer/src/Azure.AI.Personalizer.csproj
+++ b/sdk/personalizer/Azure.AI.Personalizer/src/Azure.AI.Personalizer.csproj
@@ -34,4 +34,10 @@
     <PackageReference Include="Azure.Core" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Rl.Net">
+      <HintPath>..\Lib\Rl.Net.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
