--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
@@ -2,20 +2,22 @@
 
     <PropertyGroup>
         <Version>1.0.0-beta.1</Version>
-        <Description>This package extends the Microsoft.Azure.WebJobs library with Table triggers using Microsoft Azure Storage.</Description>
+        <Description>This package extends the Microsoft.Azure.WebJobs library with Table triggers using Azure Table service.</Description>
         <TargetFrameworks>$(RequiredTargetFrameworks)</TargetFrameworks>
         <NoWarn>$(NoWarn);CS1606;CS0618;AZC0001;CS1591;SA1636;SA1028;CA1200</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.Cosmos.Table" VersionOverride="1.0.7"/>
-        <PackageReference Include="Microsoft.Azure.Storage.Blob" VersionOverride="11.1.7"/>
-        <PackageReference Include="Microsoft.Azure.Storage.Queue" VersionOverride="11.1.7"/>
-        <PackageReference Include="Microsoft.Azure.WebJobs"/>
+      <Compile Remove="Config\**" />
+      <EmbeddedResource Remove="Config\**" />
+      <None Remove="Config\**" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Config"/>
+        <PackageReference Include="Microsoft.Azure.Cosmos.Table" VersionOverride="1.0.7" />
+        <PackageReference Include="Microsoft.Azure.Storage.Blob" VersionOverride="11.1.7" />
+        <PackageReference Include="Microsoft.Azure.Storage.Queue" VersionOverride="11.1.7" />
+        <PackageReference Include="Microsoft.Azure.WebJobs" />
     </ItemGroup>
 
 </Project>
