--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -83,6 +83,7 @@
     <PackageReference Update="Azure.Core.Amqp" Version="1.2.0" />
     <PackageReference Update="Azure.Core.Experimental" Version="0.1.0-preview.18" />
     <PackageReference Update="Azure.Data.SchemaRegistry" Version="1.0.0" />
+    <PackageReference Update="Azure.Data.Tables" Version="12.3.0" />
     <PackageReference Update="Azure.Messaging.EventHubs" Version="5.6.2" />
     <PackageReference Update="Azure.Messaging.EventGrid" Version="4.7.0" />
     <PackageReference Update="Azure.Messaging.ServiceBus" Version="7.5.1" />
