--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
@@ -8,15 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Config\**" />
-      <EmbeddedResource Remove="Config\**" />
-      <None Remove="Config\**" />
-    </ItemGroup>
-
-    <ItemGroup>
         <PackageReference Include="Microsoft.Azure.Cosmos.Table" VersionOverride="1.0.7" />
-        <PackageReference Include="Microsoft.Azure.Storage.Blob" VersionOverride="11.1.7" />
-        <PackageReference Include="Microsoft.Azure.Storage.Queue" VersionOverride="11.1.7" />
+		<PackageReference Include="Azure.Data.Tables" />
         <PackageReference Include="Microsoft.Azure.WebJobs" />
     </ItemGroup>
 
