--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -11,6 +11,7 @@ steps:
   # Installation steps need to be uncommented when switching to a newer SDK that's not available on DevOps agents
   - task: UseDotNet@2
     displayName: 'Use .NET Core SDK'
+    retryCountOnTaskFailure: 3
     inputs:
       useGlobalJson: true
       performMultiLevelLookup: true
@@ -18,6 +19,7 @@ steps:
   - task: UseDotNet@2
     condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows_NT')) # Windows supports MultiLevelLookup and doesn't need explicit framework installation
     displayName: 'Use .NET Core 5.0 SDK'
+    retryCountOnTaskFailure: 3
     inputs:
       packageType: sdk
       performMultiLevelLookup: true
@@ -25,6 +27,7 @@ steps:
   - task: UseDotNet@2
     condition: and(succeeded(), ne(variables['Agent.OS'], 'Windows_NT')) # Windows supports MultiLevelLookup and doesn't need explicit framework installation
     displayName: 'Use .NET Core 3.1 SDK'
+    retryCountOnTaskFailure: 3
     inputs:
       # AspNetCore runtime pack can't be installed outside of SDK and we need it for intergation tests
       packageType: sdk
