switch to proj ref in servicebus test project

--- a/sdk/servicebus/Azure.ResourceManager.ServiceBus/tests/Azure.ResourceManager.ServiceBus.Tests.csproj
+++ b/sdk/servicebus/Azure.ResourceManager.ServiceBus/tests/Azure.ResourceManager.ServiceBus.Tests.csproj
@@ -3,9 +3,9 @@
     <ProjectReference Include="..\src\Azure.ResourceManager.ServiceBus.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Resources" />
-    <PackageReference Include="Azure.ResourceManager.Storage" />
-    <PackageReference Include="Azure.ResourceManager.Network" />
+    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
+    <ProjectReference Include="..\..\..\storage\Azure.ResourceManager.Storage\src\Azure.ResourceManager.Storage.csproj" />
+    <ProjectReference Include="..\..\..\network\Azure.ResourceManager.Network\src\Azure.ResourceManager.Network.csproj" />
     <PackageReference Include="Azure.Identity" />
   </ItemGroup>
 </Project>
