--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/src/Microsoft.Azure.WebJobs.Extensions.Tables.csproj
@@ -16,4 +16,17 @@
       <ProjectReference Include="..\..\Azure.Data.Tables\src\Azure.Data.Tables.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Include="..\..\Azure.Data.Tables\src\Extensions\StringTableExtensions.cs">
+        <Link>StringTableExtensions.cs</Link>
+      </Compile>
+      <Compile Include="..\..\Azure.Data.Tables\src\Extensions\TablesTypeBinder.cs">
+        <Link>TablesTypeBinder.cs</Link>
+      </Compile>
+      <Compile Include="$(AzureCoreSharedSources)TypeBinder.cs" LinkBase="Shared" />
+      <Compile Include="..\..\Azure.Data.Tables\src\TableConstants.cs">
+        <Link>TableConstants.cs</Link>
+      </Compile>
+    </ItemGroup>
+
 </Project>
