tests pass and cleanup

--- a/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
+++ b/sdk/tables/Microsoft.Azure.WebJobs.Extensions.Tables/tests/Microsoft.Azure.WebJobs.Extensions.Tables.Tests.csproj
@@ -22,6 +22,8 @@
     <Compile Remove="TableEntityToPocoConverterTests.cs" />
     <Compile Remove="TableEntityValueBinderTests.cs" />
     <Compile Remove="PocoToTableEntityConverterTests.cs" />
+    <Compile Remove="EntityPropertyToTConverterFactoryTests.cs" />
+    <Compile Remove="TToEntityPropertyConverterFactoryTests.cs" />
   </ItemGroup>
 
 
