--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -29,118 +29,114 @@ required_readme_sections:
   - ^Next steps$
   - ^Contributing$
 known_presence_issues:
-  - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement','#5499']
-  - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch.FileStaging','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch/Tools','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch/Tools','#5499']
-  - ['sdk/cognitiveservices/AnomalyDetector','#5499']
-  - ['sdk/cognitiveservices/Knowledge.QnAMaker','#5499']
-  - ['sdk/cognitiveservices/Language.LUIS.Authoring','#5499']
-  - ['sdk/cognitiveservices/Language.LUIS.Runtime','#5499']
-  - ['sdk/cognitiveservices/Language.SpellCheck','#5499']
-  - ['sdk/cognitiveservices/Language.TextAnalytics','#5499']
-  - ['sdk/cognitiveservices/Personalizer','#5499']
-  - ['sdk/cognitiveservices/Search.BingAutoSuggest','#5499']
-  - ['sdk/cognitiveservices/Search.BingCustomImageSearch','#5499']
-  - ['sdk/cognitiveservices/Search.BingCustomSearch','#5499']
-  - ['sdk/cognitiveservices/Search.BingEntitySearch/','#5499']
-  - ['sdk/cognitiveservices/Search.BingImageSearch/','#5499']
-  - ['sdk/cognitiveservices/Search.BingLocalSearch/','#5499']
-  - ['sdk/cognitiveservices/Search.BingNewsSearch','#5499']
-  - ['sdk/cognitiveservices/Search.BingVideoSearch','#5499']
-  - ['sdk/cognitiveservices/Search.BingVisualSearch','#5499']
-  - ['sdk/cognitiveservices/Search.BingWebSearch','#5499']
-  - ['sdk/cognitiveservices/Vision.ComputerVision','#5499']
-  - ['sdk/cognitiveservices/Vision.ContentModerator','#5499']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Prediction','#5499']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Training','#5499']
-  - ['sdk/cognitiveservices/Vision.Face','#5499']
-  - ['sdk/cognitiveservices/Vision.FormRecognizer','#5499']
-  - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry','#5499']
-  - ['sdk/eventgrid/Azure.Messaging.EventGrid/EventGridSourceGenerator','#5499']
-  - ['sdk/eventgrid/Microsoft.Azure.EventGrid','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor','#5499']
-  - ['sdk/graphrbac/Microsoft.Azure.Graph.RBAC','#5499']
-  - ['sdk/hdinsight/Microsoft.Azure.HDInsight.Job','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Core','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey','#5499']
-  - ["sdk/mediaservices/Microsoft.Azure.Media.LiveVideoAnalytics.Edge", "#5499"]
-  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Common','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Data','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Service','#5499']
-  - ['sdk/search/Microsoft.Azure.Search','#5499']
-  - ['sdk/keyvault','#5499']
-  - ['sdk/eventhub','#5499']
-  - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query/CHANGELOG.md','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/CHANGELOG.md','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch.FileStaging/CHANGELOG.md','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch/Tools/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/AnomalyDetector/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/FormRecognizer/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Knowledge.QnAMaker/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Language.LUIS.Authoring/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Language.LUIS.Runtime/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Language.SpellCheck/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Language.TextAnalytics/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Personalizer/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingAutoSuggest/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingCustomImageSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingCustomSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingEntitySearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingImageSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingLocalSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingNewsSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingVideoSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingVisualSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Search.BingWebSearch/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/textanalytics/Azure.AI.TextAnalytics/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Vision.ComputerVision/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Vision.ContentModerator/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Prediction/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Vision.CustomVision.Training/CHANGELOG.md','#5499']
-  - ['sdk/cognitiveservices/Vision.Face/CHANGELOG.md','#5499']
-  - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry/CHANGELOG.md','#5499']
-  - ['sdk/eventgrid/Microsoft.Azure.EventGrid/CHANGELOG.md','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor/CHANGELOG.md','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor/CHANGELOG.md','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs/CHANGELOG.md','#5499']
-  - ['sdk/graphrbac/Microsoft.Azure.Graph.RBAC/CHANGELOG.md','#5499']
-  - ['sdk/hdinsight/Microsoft.Azure.HDInsight.Job/CHANGELOG.md','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Core/CHANGELOG.md','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography/CHANGELOG.md','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions/CHANGELOG.md','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey/CHANGELOG.md','#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault/CHANGELOG.md','#5499']
-  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights/CHANGELOG.md','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Common/CHANGELOG.md','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Data/CHANGELOG.md','#5499']
-  - ['sdk/search/Microsoft.Azure.Search.Service/CHANGELOG.md','#5499']
-  - ['sdk/template/Azure.Template/CHANGELOG.md','#5499']
-  - ['sdk/attestation/Microsoft.Azure.Attestation','#5499']
+  - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement','Track 1']
+  - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch.FileStaging','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch/Tools','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch/Tools','Track 1']
+  - ['sdk/cognitiveservices/AnomalyDetector','Track 1']
+  - ['sdk/cognitiveservices/Knowledge.QnAMaker','Track 1']
+  - ['sdk/cognitiveservices/Language.LUIS.Authoring','Track 1']
+  - ['sdk/cognitiveservices/Language.LUIS.Runtime','Track 1']
+  - ['sdk/cognitiveservices/Language.SpellCheck','Track 1']
+  - ['sdk/cognitiveservices/Language.TextAnalytics','Track 1']
+  - ['sdk/cognitiveservices/Personalizer','Track 1']
+  - ['sdk/cognitiveservices/Search.BingAutoSuggest','Track 1']
+  - ['sdk/cognitiveservices/Search.BingCustomImageSearch','Track 1']
+  - ['sdk/cognitiveservices/Search.BingCustomSearch','Track 1']
+  - ['sdk/cognitiveservices/Search.BingEntitySearch/','Track 1']
+  - ['sdk/cognitiveservices/Search.BingImageSearch/','Track 1']
+  - ['sdk/cognitiveservices/Search.BingLocalSearch/','Track 1']
+  - ['sdk/cognitiveservices/Search.BingNewsSearch','Track 1']
+  - ['sdk/cognitiveservices/Search.BingVideoSearch','Track 1']
+  - ['sdk/cognitiveservices/Search.BingVisualSearch','Track 1']
+  - ['sdk/cognitiveservices/Search.BingWebSearch','Track 1']
+  - ['sdk/cognitiveservices/Vision.ComputerVision','Track 1']
+  - ['sdk/cognitiveservices/Vision.ContentModerator','Track 1']
+  - ['sdk/cognitiveservices/Vision.CustomVision.Prediction','Track 1']
+  - ['sdk/cognitiveservices/Vision.CustomVision.Training','Track 1']
+  - ['sdk/cognitiveservices/Vision.Face','Track 1']
+  - ['sdk/cognitiveservices/Vision.FormRecognizer','Track 1']
+  - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry','Track 1']
+  - ['sdk/eventgrid/Azure.Messaging.EventGrid/EventGridSourceGenerator','Track 1']
+  - ['sdk/eventgrid/Microsoft.Azure.EventGrid','Track 1']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor','Track 1']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor','Track 1']
+  - ['sdk/graphrbac/Microsoft.Azure.Graph.RBAC','Track 1']
+  - ['sdk/hdinsight/Microsoft.Azure.HDInsight.Job','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Core','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey','Track 1']
+  - ["sdk/mediaservices/Microsoft.Azure.Media.LiveVideoAnalytics.Edge", "Track 1"]
+  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Common','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Data','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Service','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search','Track 1']
+  - ['sdk/applicationinsights/Microsoft.Azure.ApplicationInsights.Query/CHANGELOG.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/CHANGELOG.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch.FileStaging/CHANGELOG.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch/Tools/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/AnomalyDetector/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/FormRecognizer/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Knowledge.QnAMaker/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Language.LUIS.Authoring/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Language.LUIS.Runtime/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Language.SpellCheck/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Language.TextAnalytics/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Personalizer/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingAutoSuggest/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingCustomImageSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingCustomSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingEntitySearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingImageSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingLocalSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingNewsSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingVideoSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingVisualSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Search.BingWebSearch/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Vision.ComputerVision/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Vision.ContentModerator/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Vision.CustomVision.Prediction/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Vision.CustomVision.Training/CHANGELOG.md','Track 1']
+  - ['sdk/cognitiveservices/Vision.Face/CHANGELOG.md','Track 1']
+  - ['sdk/containerregistry/Microsoft.Azure.ContainerRegistry/CHANGELOG.md','Track 1']
+  - ['sdk/eventgrid/Microsoft.Azure.EventGrid/CHANGELOG.md','Track 1']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs.Processor/CHANGELOG.md','Track 1']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs.ServiceFabricProcessor/CHANGELOG.md','Track 1']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs/CHANGELOG.md','Track 1']
+  - ['sdk/graphrbac/Microsoft.Azure.Graph.RBAC/CHANGELOG.md','Track 1']
+  - ['sdk/hdinsight/Microsoft.Azure.HDInsight.Job/CHANGELOG.md','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Core/CHANGELOG.md','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Cryptography/CHANGELOG.md','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.Extensions/CHANGELOG.md','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault.WebKey/CHANGELOG.md','Track 1']
+  - ['sdk/keyvault/Microsoft.Azure.KeyVault/CHANGELOG.md','Track 1']
+  - ['sdk/operationalinsights/Microsoft.Azure.OperationalInsights/CHANGELOG.md','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Common/CHANGELOG.md','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Data/CHANGELOG.md','Track 1']
+  - ['sdk/search/Microsoft.Azure.Search.Service/CHANGELOG.md','Track 1']
+  - ['sdk/attestation/Microsoft.Azure.Attestation','Track 1']
 
 known_content_issues:
   - ['README.md','Root readme']
   - ['doc/README.md','Doc readme']
-  - ['sdk/core/Azure.Core/README.md', '#5499']
-  - ['sdk/core/Azure.Core.Experimental/README.md', '#5499']
+  - ['sdk/core/Azure.Core.Experimental/README.md', 'Experimental library']
   - ['sdk/core/Azure.Core.Amqp/README.md', '#5499']
   - ['sdk/core/System.Memory.Data/README.md', '#5499']
   - ['sdk/keyvault/Microsoft.Azure.KeyVault/README.md','#5499']
   - ['sdk/servicebus/Microsoft.Azure.ServiceBus/README.md','#5499']
-  - ['sdk/eventhub/Microsoft.Azure.EventHubs/README.md','#5499']
-  - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement/README.md','#5499']
+  - ['sdk/eventhub/Microsoft.Azure.EventHubs/README.md','Track 1']
+  - ['sdk/eventhub/Azure.Messaging.EventHubs.Shared/README.md','Not a service library']
+  - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement/README.md','Track 1']
   - ['sdk/appconfiguration/README.md','azure-sdk-tools/issues/42']
   - ['sdk/storage/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/cognitiveservices/FormRecognizer/README.md','#5499']
-  - ['sdk/cognitiveservices/Language.TextAnalytics/src/README.md','#5499']
-  - ['sdk/cognitiveservices/Personalizer/src/README.md','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch/README.md','#5499']
-  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/README.md','#5499']
+  - ['sdk/cognitiveservices/FormRecognizer/README.md','Track 1']
+  - ['sdk/cognitiveservices/Language.TextAnalytics/src/README.md','Track 1']
+  - ['sdk/cognitiveservices/Personalizer/src/README.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch/README.md','Track 1']
+  - ['sdk/batch/Microsoft.Azure.Batch.Conventions.Files/README.md','Track 1']
   - ['sdk/extensions/README.md','azure-sdk-tools/issues/42']
   - ['sdk/extensions/Azure.Extensions.AspNetCore.DataProtection.Blobs/README.md','azure-sdk-tools/issues/404']
   - ['sdk/extensions/Azure.Extensions.AspNetCore.DataProtection.Keys/README.md','azure-sdk-tools/issues/404']
