--- a/sdk/databox/Microsoft.Azure.Management.DataBox/src/Microsoft.Azure.Management.DataBox.csproj
+++ b/sdk/databox/Microsoft.Azure.Management.DataBox/src/Microsoft.Azure.Management.DataBox.csproj
@@ -7,16 +7,20 @@
 		<PackageId>Microsoft.Azure.Management.DataBox</PackageId>
 		<Description>Microsoft Azure Management DataBox library</Description>
 		<AssemblyName>Microsoft.Azure.Management.DataBox</AssemblyName>
-		<Version>1.3.1</Version>
+		<Version>2.0.0</Version>
 		<PackageTags>AzureDataBox;DataBox;</PackageTags>
     <PackageReleaseNotes>
 
       <![CDATA[
                 Changes:
                 
-                1) Updating users that properties of default error response i.e ApiErrorException has been changed from 1.2.0 and later versions.
+                1) Added DataBox Customer Disk SKU and the related models and operations for it.
                 
-                2) Ensuring support of customer managed key with user assigned identities during job creation.
+                2) Added DataCenterAddressRequest in RegionConfigurationRequest API.
+				
+				        3) Added API to mark Devices Shipped for customer disk.
+
+                4) Modified JobStage and CopyStatus to be modelled as string 				
             
             ]]>
 
@@ -28,6 +32,21 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="System.Text.Encoding" Version="4.3.0" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net452'">
+	  <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.TestFramework">
+	    <Version>1.7.7</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+	  <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.TestFramework">
+	    <Version>1.7.7</Version>
+	  </PackageReference>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+	  <PackageReference Include="Microsoft.Rest.ClientRuntime.Azure.TestFramework">
+	    <Version>1.7.7</Version>
+	  </PackageReference>
 	</ItemGroup>
 
 	<!-- Please do not move/edit code below this line -->
