initial work on Storage auth sections

--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -122,11 +122,9 @@ known_presence_issues:
 known_content_issues:
   - ['README.md','Root readme']
   - ['doc/README.md','Doc readme']
-  - ['sdk/core/Azure.Core.Experimental/README.md', 'Experimental library']
+  - ['sdk/core/Azure.Core.Experimental/README.md', 'Not a service library']
   - ['sdk/core/Azure.Core.Amqp/README.md', '#5499']
   - ['sdk/core/System.Memory.Data/README.md', '#5499']
-  - ['sdk/keyvault/Microsoft.Azure.KeyVault/README.md','#5499']
-  - ['sdk/servicebus/Microsoft.Azure.ServiceBus/README.md','#5499']
   - ['sdk/eventhub/Microsoft.Azure.EventHubs/README.md','Track 1']
   - ['sdk/eventhub/Azure.Messaging.EventHubs.Shared/README.md','Not a service library']
   - ['sdk/alertsmanagement/Microsoft.Azure.Management.AlertsManagement/README.md','Track 1']
@@ -146,20 +144,8 @@ known_content_issues:
   - ['sdk/eventgrid/README.md','azure-sdk-tools/issues/42']
   - ['sdk/eventgrid/Microsoft.Azure.Messaging.EventGrid.CloudNativeCloudEvents/README.md', '#15423']
   - ['sdk/eventhub/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/eventhub/Azure.Messaging.EventHubs.Experimental/README.md', '#5499']
   - ['sdk/search/README.md','azure-sdk-tools/issues/42']
-  - ['sdk/storage/Azure.Storage.Blobs/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Blobs/perf/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Blobs.Batch/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Blobs.Cryptography/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Common/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Files.DataLake/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Files.DataLake/perf/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Files.Shares/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Files.Shares/perf/README.md','#11492']
-  - ['sdk/storage/Azure.Storage.Queues/README.md','#11492']
-  - ['sdk/synapse/Microsoft.Azure.Synapse/README.md','#11492']
-  - ['sdk/tables/Azure.Data.Tables/readme.md', '#11492']
+  - ['sdk/storage/Azure.Storage.Common/README.md','azure-sdk-tools/issues/42']
   - ['sdk/core/Azure.Core.TestFramework/README.md', '#11492']
   - ['sdk/core/Microsoft.Azure.Core.NewtonsoftJson/README.md', '#15423']
   - ['sdk/core/Microsoft.Azure.Core.Spatial/README.md', '#15423']
